Added JS selector

--- a/style.css
+++ b/style.css
@@ -33,3 +33,17 @@ body {
   font-size: 1rem;
   margin-left: 0.5rem;
 }
+
+.notes .main  {
+  display: none;
+  height: 100%;
+  width: 100%;
+}
+
+.notes textarea {
+  outline: none;
+  font-family: inherit;
+  border: none;
+  height: 100%;
+  width: 100%;
+}
