--- a/style.css
+++ b/style.css
@@ -1,49 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  background-color: #7BDAF3;
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  display: flex;
-  flex-wrap: wrap;
+    background-color: #7bdaf3;
+    display: flex;
+    flex-wrap: wrap;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding-top: 3rem;
 }
 
-.notes {
-  background-color: #fff;
-  height: 400px;
-  width: 400px;
-  margin: 20px;
+.add {
+    background-color: #9ec862;
+    border-radius: 3px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
 }
 
-.notes .tools {
-  background-color: #9ec862;
-  padding: 0.5rem;
-  display: flex;
-  justify-content: flex-end;
+.note {
+    background-color: #fff;
+    box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    height: 400px;
+    width: 400px;
 }
 
-.notes .tools button {
-  background-color: transparent;
-  border: none;
-  color: #fff;
-  font-size: 1rem;
-  margin-left: 0.5rem;
+.note .tools {
+    background-color: #9ec862;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0.5rem;
 }
 
-.notes .main  {
-  display: none;
-  height: 100%;
-  width: 100%;
+.note .tools button {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-left: 0.5rem;
 }
 
-.notes textarea {
-  outline: none;
-  font-family: inherit;
-  border: none;
-  height: 100%;
-  width: 100%;
+.note .main {
+    background-color: #eee;
+    overflow: hidden;
+    height: 400px;
+    width: 100%;
+}
+
+.note textarea {
+    outline: none;
+    font-family: inherit;
+    font-size: 1.2rem;
+    border: none;
+    height: 400px;
+    width: 100%;
+}
+
+.note .hidden {
+    display: none;
 }
